--- a/app/src/main/res/layout/activity_list_data.xml
+++ b/app/src/main/res/layout/activity_list_data.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Detailed weather forecast view that looks like an list, but is instead made up of several Linear Layouts and TextViews
+<!-- Detailed weather forecast view that looks like an list, however, is instead made up of several Linear Layouts and TextViews
     Created by Gemma Grant s2030516 -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -45,7 +45,7 @@
                 >
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/date_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:height="30dp"
